# my-test

./: codecov_bak.yml  pyproject.toml  readme.md
.github/workflows/: pull_request.yml  test.yml
my_test/: run.py
tests/: test_run.py
