[tool.poetry]
name = "my-test"
version = "0.1.0"
description = ""
authors = ["HarrisChu <1726587+HarrisChu@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.2.5"
black = "^21.9b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
